<resources>
    <string name="app_name">FOEHN</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_logo">App Logo</string>
    <!-- Strings related to navigation -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="help">Help</string>
    <string name="visit_foehn">Visit Foehn</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_webview">FOEHN Website</string>
    <string name="title_activity_signup">Signup</string>

    <!-- Strings related to login -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="no_account_yet_Create_one">No account yet? Create one</string>
    <string name="error_invalid_email">Please check Email address</string>
    <string name="error_invalid_password">Please check Password.</string>
    <string name="create_account">create_account</string>

    <!-- Strings related to signup -->
    <string name="firstname">First Name:</string>
    <string name="editfirstname">first name</string>
    <string name="lastname">Last Name:</string>
    <string name="editlastname">last name</string>
    <string name="mobileno">Mobile No:</string>
    <string name="editmobileno">8888888888</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="dob">Date of Birth:</string>
    <string name="editdob">dd-mm-yyyy</string>
    <string name="emailsignup">Email:</string>
    <string name="editemailsignup">abc@123.com</string>
    <string name="passwordsignup">Password:</string>
    <string name="editpasswordsignup">******</string>
    <string name="cpasswordsignup">Confirm Password:</string>
    <string name="editcpasswordsignup">******</string>
    <string name="signup">Sign up</string>
    <!-- Strings related to contactus -->
    <string name="version">Version 1.0</string>
    <string name="feedback">Feedback</string>
    <string name="support">support@foehn.comli.com</string>
    <!-- Strings related to donate -->
    <string name="food">Food</string>
    <string name="orphan">Orphan</string>
    <string name="education">Education</string>
    <string name="health">Health</string>
    <string name="naturalcalamities">Natural Calamities</string>

   </resources>
