<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_contactus"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="inc.thenewpirates.foehn.ContactusFragment">

    <ImageView
        android:id="@+id/cuimageview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/app_logo"
        android:gravity="center"
        android:paddingBottom="@dimen/vertical_margin"
        android:paddingLeft="@dimen/horizontal_margin"
        android:paddingRight="@dimen/horizontal_margin"
        android:paddingTop="@dimen/vertical_margin"
        android:src="@mipmap/appicon" />

    <TextView
        android:id="@+id/cutextview1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:paddingBottom="@dimen/vertical_margin"
        android:paddingLeft="@dimen/horizontal_margin"
        android:paddingRight="@dimen/horizontal_margin"
        android:text="@string/app_name"
        android:textSize="@dimen/textsize"
        android:textStyle="bold"
        android:textColor="#000000"/>
    <TextView
        android:id="@+id/cutextview2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:paddingBottom="@dimen/vertical_margin"
        android:paddingLeft="@dimen/horizontal_margin"
        android:paddingRight="@dimen/horizontal_margin"
        android:text="@string/version"
        android:textColor="#000000"/>

    <ImageButton
        android:id="@+id/cuimagebutton"
        android:contentDescription="@string/feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/pencil"
        android:layout_gravity="center_horizontal"
        android:onClick="feedbackprocess"
        android:clickable="true"/>

    <TextView
        android:id="@+id/cusupport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:paddingBottom="@dimen/vertical_margin"
        android:paddingLeft="@dimen/horizontal_margin"
        android:paddingRight="@dimen/horizontal_margin"
        android:paddingTop="@dimen/vertical_margin"
        android:text="@string/support"
        android:onClick="supportprocess"
        android:textColor="#000000"
        android:clickable="true"/>



</LinearLayout>
